# wasm_thread_test

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html
.cargo/: config.toml
src/: call-rust.js  lib.rs  main.rs
