[package]
name = "vanilla-example"
version = "0.1.0"
authors = ["Philip Peterson <pc.peterso@gmail.com>"]
edition = "2021"
default-run = "vanilla-example-native"

# [lib]
# crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vanilla-example-native"

[profile.release]
panic = "abort"

[dependencies]
async-channel = "1.4"
console_error_panic_hook = "0.1"
console_log = { version = "0.2", features = ["color"] }
env_logger = "0.7"
futures = "0.3"
js-sys = "0.3"
log = "0.4"
wasm-bindgen = "=0.2.87"
wasm_thread = "0.2"
web-sys = { version = "0.3", features = [ "Blob", "DedicatedWorkerGlobalScope", "Document",  "HtmlElement",  "MessageEvent", "Node",  "Text", "Url",  "Window",  "Worker",  "WorkerOptions",  "WorkerType",  ] }
